<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical"
    tools:context="gagan.storemgmtapp.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackgroundDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/product_name"
            android:textAlignment="gravity"
            android:textColor="@color/colorTextMain" />

        <EditText
            android:id="@+id/edit_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/colorTextMain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackgroundDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/product_quantity"
            android:textAlignment="gravity"
            android:textColor="@color/colorTextMain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_quantity_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="@color/colorTextMain" />

            <Button
                android:id="@+id/add_quantity"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decrease_quantity"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackgroundDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/product_price"
            android:textAlignment="gravity"
            android:textColor="@color/colorTextMain" />

        <EditText
            android:id="@+id/edit_price_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textColor="@color/colorTextMain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackgroundDark">

        <ImageView
            android:id="@+id/edit_activity_image_view"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/edit_activity_add_image"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/add_image"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_activity_remove_image"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/remove_image"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/order_intent_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:background="@color/colorBackgroundDark"
        android:text="@string/order"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />
</LinearLayout>
